--- a/MasadaSecurity/ClientApp/package.json
+++ b/MasadaSecurity/ClientApp/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
-    "rimraf": "^2.6.2"
+    "react-scroll": "^1.8.2",
+    "rimraf": "^2.6.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
