--- a/MasadaSecurity/ClientApp/package.json
+++ b/MasadaSecurity/ClientApp/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
@@ -11,7 +16,8 @@
     "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.2",
     "rimraf": "^2.6.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
