--- a/MasadaSecurity/ClientApp/package.json
+++ b/MasadaSecurity/ClientApp/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "merge": "^1.2.1",
