--- a/MasadaSecurity/clientappts/package.json
+++ b/MasadaSecurity/clientappts/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
