Converted to TypeScript & Setup Email

--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,7 @@ $RECYCLE.BIN/
 !.vscode/launch.json
 !.vscode/extensions.json
 
+**/appsettings.development.json
+**/appsettings.staging.json
+**/appsettings.production.json
+MasadaSecurity/appsettings.json
