--- a/MasadaSecurity/appsettings.Development.json
+++ b/MasadaSecurity/appsettings.Development.json
@@ -1,9 +1,8 @@
 {
-  "Logging": {
+  "Lambda.Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Information"
     }
   }
 }
